sophons/apps/authelia/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: forwardauth-authelia
  namespace: authelia
spec:
  forwardAuth:
    address: "http://authelia.authelia.svc.cluster.local/api/authz/forward-auth"
    trustForwardHeader: true
    authResponseHeaders:
      - "Remote-User"
      - "Remote-Name"
      - "Remote-Email"
      - "Remote-Groups"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: chain-authelia-auth
  namespace: authelia
spec:
  chain:
    middlewares:
      - name: forwardauth-authelia
        namespace: authelia
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: static-well-known-openid-configuration
  namespace: authelia
spec:
  plugin:
    static-response:
      headers:
        content-type: application/json; charset=utf-8
        cache-control: max-age=604800, stale-while-revalidate=86400
        # content-security-policy: default-src 'none'
        # permissions-policy: accelerometer=(), autoplay=(), camera=(), display-capture=(), geolocation=(), gyroscope=(), keyboard-map=(), magnetometer=(), microphone=(), midi=(), payment=(), picture-in-picture=(), screen-wake-lock=(), sync-xhr=(), xr-spatial-tracking=(), interest-cohort=()
        # referrer-policy: strict-origin-when-cross-origin
        # x-content-type-options: nosniff
        # x-dns-prefetch-control: off
        # x-frame-options: DENY
      body: |-
        {"issuer":"https://auth.sophons.cloud","jwks_uri":"https://auth.sophons.cloud/jwks.json","authorization_endpoint":"https://auth.sophons.cloud/api/oidc/authorization","token_endpoint":"https://auth.sophons.cloud/api/oidc/token","subject_types_supported":["public","pairwise"],"response_types_supported":["code","id_token","token","id_token token","code id_token","code token","code id_token token"],"grant_types_supported":["authorization_code","implicit","client_credentials","refresh_token", [...]
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: static-jwks-json
  namespace: authelia
spec:
  plugin:
    static-response:
      headers:
        content-type: application/json; charset=utf-8
        cache-control: max-age=604800, stale-while-revalidate=86400
      body: |-
        {"keys":[{"use":"sig","kty":"RSA","kid":"19a1ca-rs256","alg":"RS256","n":"s5eJCLJlP2XuhHUT9jcyde9i0IA_2Kh8ODadSA1l0S-QK7Ui9o4yGwZhd2VEx7MzyA94zRiQtr5VxFe87HJErY9LfMhQNJiO9v9Uj-WlK5SzQkajM2d-3WQeBB_PeVJTkzFTU8R6NjLEVX7qEGXl686JxCwfcmoc-W2IGCIsBuGlYbK3vPFCip4BLJLpPhBMVmnXoDZCW3igfPBxfE9VULudDOCX_nJyOywEmjU4-XYQvMMsdjCczcDRd9-uqG1MTZfUREgB8vX-ZLAaRJbVQHsSYWA15hJb_ypx0cKa0QWg52TKO_eMEw4Wtm1LE0GqUqHlilBKKqvz9Gh8msB64Q","e":"AQAB"}]}
