sophons/apps/authelia/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authelia
  namespace: authelia
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Authzzz
    gethomepage.dev/group: Admin
    gethomepage.dev/icon: authelia.svg
    gethomepage.dev/name: Authelia
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure

  hostnames:
    - auth.sophons.cloud
    - auth.vrtx.sh
    - auth.kaos.nexus

  rules:
    - matches:
        - path:
            type: Exact
            value: /.well-known/openid-configuration
        - path:
            type: Exact
            value: /jwks.json
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: oidc-cache
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            remove: [pragma]
            set:
              - name: cache-control
                value: max-age=604800, stale-while-revalidate=86400
      backendRefs:
        - name: authelia
          port: 80
    - backendRefs:
        - name: authelia
          port: 80
